<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <POU Name="AutomaticControl" Id="{f9244839-88dd-4f0f-95ab-d4274120fb90}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK PUBLIC AutomaticControl
VAR_INPUT
	Switch: BOOL;
END_VAR
VAR
	SwitchedManualAuto: BOOL := FALSE;
	initialized: BOOL := FALSE;
	State: INT := 0;
END_VAR
VAR_OUTPUT
	Output: BOOL;
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[// Initially go to position (0,0,0,0) and initialize motors
IF NOT IO.Initialized THEN
	Initialize();
ELSE
	//Safety();	// to stop when out of range
	
	// COUNTING (POSITION):
	CountPosition();	// FOR MANUAL MODE
	
	// RESET THE POSITION:
	IF (Automatic.RotationPositionAuto - Automatic.RotationPositionCurrent > 20 OR Automatic.RotationPositionAuto - Automatic.RotationPositionCurrent > 20) AND IO.SwitchedToAutomatic THEN
		IF Automatic.RotationPositionAuto - Automatic.RotationPositionCurrent > 20 THEN
			IO.MotorRotationDirection := 0;
		ELSE
			IO.MotorRotationDirection := 1;
		END_IF
		IO.MotorRotation := 1;
	ELSE 
		IO.MotorRotation := 0;
		IO.SwitchedToAutomatic := 0;
	END_IF
	(*IF Automatic.ExtensionPositionAuto <> Automatic.ExtensionPositionCurrent AND NOT IO.Switch THEN
		IF Automatic.ExtensionPositionAuto - Automatic.ExtensionPositionCurrent > 0 THEN
			IO.MotorExtensionDirection := 0;
		ELSE
			IO.MotorExtensionDirection := 1;
		END_IF
		IO.MotorExtension := 1;
	ELSE 
		IF NOT IO.Switch THEN
			IO.MotorExtension := 0;
		END_IF
	END_IF*)
	
	
	
	// RECIPES (recipe is sequence of moves to execute the task):
	Recipe1();
	
END_IF

// for debugging purposes:
IF IO.ButtonRed THEN
	IO.Initialized := FALSE;
END_IF

RETURN;]]></ST>
    </Implementation>
    <LineIds Name="AutomaticControl">
      <LineId Id="652" Count="3" />
      <LineId Id="657" Count="2" />
      <LineId Id="876" Count="0" />
      <LineId Id="822" Count="0" />
      <LineId Id="713" Count="8" />
      <LineId Id="723" Count="0" />
      <LineId Id="882" Count="0" />
      <LineId Id="725" Count="0" />
      <LineId Id="849" Count="10" />
      <LineId Id="848" Count="0" />
      <LineId Id="761" Count="0" />
      <LineId Id="877" Count="1" />
      <LineId Id="779" Count="0" />
      <LineId Id="810" Count="0" />
      <LineId Id="778" Count="0" />
      <LineId Id="768" Count="0" />
      <LineId Id="806" Count="3" />
      <LineId Id="805" Count="0" />
      <LineId Id="777" Count="0" />
      <LineId Id="38" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>