<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <POU Name="Recipe2" Id="{930ee78d-730a-40ec-8472-7051a438ce0e}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM Recipe2
VAR
	State: INT := 8;
	Ended: BOOL := FALSE;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF State = 24 AND IO.ButtonGreen THEN	// reinitialize and run the recipe again on green button press
	IO.Initialized := 0;
	State := 0;
END_IF

IF IO.Initialized AND NOT IO.Switch THEN
	
	// WOOD:
	IF State = 0 THEN
		IF Automatic.LiftingPositionAuto < 50 THEN
			IO.MotorLiftingDirection := 0;
			IO.MotorLifting := 1;
			Automatic.LiftingPositionAuto := Automatic.LiftingPositionAuto + 1;
			Automatic.LiftingPositionCurrent := Automatic.LiftingPositionCurrent + 1;
		ELSE
			State := 1;
			IO.MotorLifting := 0;
		END_IF
	ELSIF State = 1 THEN
		IF Automatic.ExtensionPositionAuto < 388 THEN
			IO.MotorExtensionDirection := 0;
			IO.MotorExtension := 1;
			Automatic.ExtensionPositionAuto := Automatic.ExtensionPositionAuto + 1;
			Automatic.ExtensionPositionCurrent := Automatic.ExtensionPositionCurrent + 1;
		ELSE
			State := 2;
			IO.MotorExtension := 0;
		END_IF
	ELSIF State = 2 THEN
		IF Automatic.GripPositionAuto < 160 THEN
			IO.MotorGripDirection := 0;
			IO.MotorGrip := 1;
			Automatic.GripPositionAuto := Automatic.GripPositionAuto + 1;
			Automatic.GripPositionCurrent := Automatic.GripPositionCurrent + 1;
		ELSE
			State := 3;
			IO.MotorGrip := 0;
		END_IF
	ELSIF State = 3 THEN
		IF NOT IO.EndLiftingSensor THEN
			IO.MotorLiftingDirection := 1;
			IO.MotorLifting := 1;
			Automatic.LiftingPositionAuto := Automatic.LiftingPositionAuto - 1;
			Automatic.LiftingPositionCurrent := Automatic.LiftingPositionCurrent - 1;
		ELSE
			State := 4;
			IO.MotorLifting := 0;
		END_IF
	ELSIF State = 4 THEN
		IF Automatic.RotationPositionAuto < 300 THEN
			IO.MotorRotationDirection := 0;
			IO.MotorRotation := 1;
			Automatic.RotationPositionAuto := Automatic.RotationPositionAuto + 1;
			Automatic.RotationPositionCurrent := Automatic.RotationPositionCurrent + 1;
		ELSE
			State := 5;
			IO.MotorRotation := 0;
		END_IF
	ELSIF State = 5 THEN
		IF NOT IO.EndExtensionSensor THEN	// it drops wood in the nearest bin
			IO.MotorExtensionDirection := 1;
			IO.MotorExtension := 1;
			Automatic.ExtensionPositionAuto := Automatic.ExtensionPositionAuto - 1;
			Automatic.ExtensionPositionCurrent := Automatic.ExtensionPositionCurrent - 1;
		ELSE
			State := 6;
			IO.MotorExtension := 0;
		END_IF
	ELSIF State = 6 THEN
		IF NOT IO.EndGripSensor THEN
			IO.MotorGripDirection := 1;
			IO.MotorGrip := 1;
			Automatic.GripPositionAuto := Automatic.GripPositionAuto - 1;
			Automatic.GripPositionCurrent := Automatic.GripPositionCurrent - 1;
		ELSE
			State := 7;
			IO.MotorGrip := 0;
		END_IF
	ELSIF State = 7 THEN
		IF NOT IO.EndRotationSensor THEN
			IO.MotorRotationDirection := 1;
			IO.MotorRotation := 1;
			Automatic.RotationPositionAuto := Automatic.RotationPositionAuto - 1;
			Automatic.RotationPositionCurrent := Automatic.RotationPositionCurrent - 1;
		ELSE
			State := 8;
			IO.MotorRotation := 0;
		END_IF
	END_IF
	
	// PLASTICS:
	IF State = 8 THEN
		IF Automatic.LiftingPositionAuto < 250 THEN
			IO.MotorLiftingDirection := 0;
			IO.MotorLifting := 1;
			Automatic.LiftingPositionAuto := Automatic.LiftingPositionAuto + 1;
			Automatic.LiftingPositionCurrent := Automatic.LiftingPositionCurrent + 1;
		ELSE
			State := 9;
			IO.MotorLifting := 0;
		END_IF
	ELSIF State = 9 THEN
		IF Automatic.ExtensionPositionAuto < 388 THEN
			IO.MotorExtensionDirection := 0;
			IO.MotorExtension := 1;
			Automatic.ExtensionPositionAuto := Automatic.ExtensionPositionAuto + 1;
			Automatic.ExtensionPositionCurrent := Automatic.ExtensionPositionCurrent + 1;
		ELSE
			State := 10;
			IO.MotorExtension := 0;
		END_IF
	ELSIF State = 10 THEN
		IF Automatic.GripPositionAuto < 160 THEN
			IO.MotorGripDirection := 0;
			IO.MotorGrip := 1;
			Automatic.GripPositionAuto := Automatic.GripPositionAuto + 1;
			Automatic.GripPositionCurrent := Automatic.GripPositionCurrent + 1;
		ELSE
			State := 11;
			IO.MotorGrip := 0;
		END_IF
	ELSIF State = 11 THEN
		IF NOT IO.EndLiftingSensor THEN
			IO.MotorLiftingDirection := 1;
			IO.MotorLifting := 1;
			Automatic.LiftingPositionAuto := Automatic.LiftingPositionAuto - 1;
			Automatic.LiftingPositionCurrent := Automatic.LiftingPositionCurrent - 1;
		ELSE
			State := 12;
			IO.MotorLifting := 0;
		END_IF
	ELSIF State = 12 THEN
		IF Automatic.RotationPositionAuto < 300 THEN
			IO.MotorRotationDirection := 0;
			IO.MotorRotation := 1;
			Automatic.RotationPositionAuto := Automatic.RotationPositionAuto + 1;
			Automatic.RotationPositionCurrent := Automatic.RotationPositionCurrent + 1;
		ELSE
			State := 13;
			IO.MotorRotation := 0;
		END_IF
	ELSIF State = 13 THEN
		IF Automatic.ExtensionPositionAuto > 300 THEN	// it drops plastics into second nearest bin
			IO.MotorExtensionDirection := 1;
			IO.MotorExtension := 1;
			Automatic.ExtensionPositionAuto := Automatic.ExtensionPositionAuto - 1;
			Automatic.ExtensionPositionCurrent := Automatic.ExtensionPositionCurrent - 1;
		ELSE
			State := 14;
			IO.MotorExtensionDirection := 0;
			IO.MotorExtension := 0;
		END_IF
	ELSIF State = 14 THEN
		IF NOT IO.EndGripSensor THEN
			IO.MotorGripDirection := 1;
			IO.MotorGrip := 1;
			Automatic.GripPositionAuto := Automatic.GripPositionAuto - 1;
			Automatic.GripPositionCurrent := Automatic.GripPositionCurrent - 1;
		ELSE
			State := 15;
			IO.MotorGrip := 0;
		END_IF
	ELSIF State = 15 THEN
		IF NOT IO.EndRotationSensor THEN
			IO.MotorRotationDirection := 1;
			IO.MotorRotation := 1;
			Automatic.RotationPositionAuto := Automatic.RotationPositionAuto - 1;
			Automatic.RotationPositionCurrent := Automatic.RotationPositionCurrent - 1;
		ELSE
			State := 16;
			IO.MotorRotation := 0;
		END_IF
	END_IF
	
	// METAL:
	IF State = 16 THEN
		IF Automatic.LiftingPositionAuto < 400 THEN
			IO.MotorLiftingDirection := 0;
			IO.MotorLifting := 1;
			Automatic.LiftingPositionAuto := Automatic.LiftingPositionAuto + 1;
			Automatic.LiftingPositionCurrent := Automatic.LiftingPositionCurrent + 1;
		ELSE
			State := 17;
			IO.MotorLifting := 0;
		END_IF
	ELSIF State = 17 THEN
		IF Automatic.ExtensionPositionAuto < 388 THEN
			IO.MotorExtensionDirection := 0;
			IO.MotorExtension := 1;
			Automatic.ExtensionPositionAuto := Automatic.ExtensionPositionAuto + 1;
			Automatic.ExtensionPositionCurrent := Automatic.ExtensionPositionCurrent + 1;
		ELSE
			State := 18;
			IO.MotorExtension := 0;
		END_IF
	ELSIF State = 18 THEN
		IF Automatic.GripPositionAuto < 160 THEN
			IO.MotorGripDirection := 0;
			IO.MotorGrip := 1;
			Automatic.GripPositionAuto := Automatic.GripPositionAuto + 1;
			Automatic.GripPositionCurrent := Automatic.GripPositionCurrent + 1;
		ELSE
			State := 19;
			IO.MotorGrip := 0;
		END_IF
	ELSIF State = 19 THEN
		IF NOT IO.EndLiftingSensor THEN
			IO.MotorLiftingDirection := 1;
			IO.MotorLifting := 1;
			Automatic.LiftingPositionAuto := Automatic.LiftingPositionAuto - 1;
			Automatic.LiftingPositionCurrent := Automatic.LiftingPositionCurrent - 1;
		ELSE
			State := 20;
			IO.MotorLifting := 0;
		END_IF
	ELSIF State = 20 THEN
		IF Automatic.RotationPositionAuto < 300 THEN
			IO.MotorRotationDirection := 0;
			IO.MotorRotation := 1;
			Automatic.RotationPositionAuto := Automatic.RotationPositionAuto + 1;
			Automatic.RotationPositionCurrent := Automatic.RotationPositionCurrent + 1;
		ELSE
			State := 21;
			IO.MotorRotation := 0;
		END_IF
	ELSIF State = 21 THEN
		IF Automatic.ExtensionPositionAuto > 500 THEN	// it drops metal into farthest bin
			IO.MotorExtensionDirection := 1;
			IO.MotorExtension := 1;
			Automatic.ExtensionPositionAuto := Automatic.ExtensionPositionAuto - 1;
			Automatic.ExtensionPositionCurrent := Automatic.ExtensionPositionCurrent - 1;
		ELSE
			State := 22;
			IO.MotorExtension := 0;
		END_IF
	ELSIF State = 22 THEN
		IF NOT IO.EndGripSensor THEN
			IO.MotorGripDirection := 1;
			IO.MotorGrip := 1;
			Automatic.GripPositionAuto := Automatic.GripPositionAuto - 1;
			Automatic.GripPositionCurrent := Automatic.GripPositionCurrent - 1;
		ELSE
			State := 23;
			IO.MotorGrip := 0;
		END_IF
	ELSIF State = 23 THEN
		IF NOT IO.EndRotationSensor THEN
			IO.MotorRotationDirection := 1;
			IO.MotorRotation := 1;
			Automatic.RotationPositionAuto := Automatic.RotationPositionAuto - 1;
			Automatic.RotationPositionCurrent := Automatic.RotationPositionCurrent - 1;
		ELSE
			State := 24;
			IO.MotorRotation := 0;
		END_IF
	ELSIF State = 24 THEN
		State := 8;
		Ended := TRUE;
	END_IF
END_IF]]></ST>
    </Implementation>
    <LineIds Name="Recipe2">
      <LineId Id="128" Count="5" />
      <LineId Id="139" Count="252" />
      <LineId Id="5" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>